; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_codecapture.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_codecapture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@MAXOFF = common dso_local global i32 0, align 4
@IFullCapture = common dso_local global i32 0, align 4
@IOpenCapture = common dso_local global i32 0, align 4
@ICloseCapture = common dso_local global i32 0, align 4
@Cclose = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_4__*, i32, i32*)* @codecapture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @codecapture(i32* %0, %struct.TYPE_4__* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %11 = call i32 @sib1(%struct.TYPE_4__* %10)
  %12 = call i32 @fixedlen(i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp sge i32 %13, 0
  br i1 %14, label %15, label %41

15:                                               ; preds = %4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* @MAXOFF, align 4
  %18 = icmp sle i32 %16, %17
  br i1 %18, label %19, label %41

19:                                               ; preds = %15
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %21 = call i32 @sib1(%struct.TYPE_4__* %20)
  %22 = call i32 @hascaptures(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %41, label %24

24:                                               ; preds = %19
  %25 = load i32*, i32** %5, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %27 = call i32 @sib1(%struct.TYPE_4__* %26)
  %28 = load i32, i32* %7, align 4
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @codegen(i32* %25, i32 %27, i32 0, i32 %28, i32* %29)
  %31 = load i32*, i32** %5, align 8
  %32 = load i32, i32* @IFullCapture, align 4
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @addinstcap(i32* %31, i32 %32, i32 %35, i32 %38, i32 %39)
  br label %61

41:                                               ; preds = %19, %15, %4
  %42 = load i32*, i32** %5, align 8
  %43 = load i32, i32* @IOpenCapture, align 4
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @addinstcap(i32* %42, i32 %43, i32 %46, i32 %49, i32 0)
  %51 = load i32*, i32** %5, align 8
  %52 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %53 = call i32 @sib1(%struct.TYPE_4__* %52)
  %54 = load i32, i32* %7, align 4
  %55 = load i32*, i32** %8, align 8
  %56 = call i32 @codegen(i32* %51, i32 %53, i32 0, i32 %54, i32* %55)
  %57 = load i32*, i32** %5, align 8
  %58 = load i32, i32* @ICloseCapture, align 4
  %59 = load i32, i32* @Cclose, align 4
  %60 = call i32 @addinstcap(i32* %57, i32 %58, i32 %59, i32 0, i32 0)
  br label %61

61:                                               ; preds = %41, %24
  ret void
}

declare dso_local i32 @fixedlen(i32) #1

declare dso_local i32 @sib1(%struct.TYPE_4__*) #1

declare dso_local i32 @hascaptures(i32) #1

declare dso_local i32 @codegen(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @addinstcap(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
